2001-07-14  Elliot Glaysher  <eglayshe@umich.edu>

	* debian/rules: Now builds working packages.
	* Makefile.PL: Clean's up more Debian stuff.

2001-07-14  Elliot Glaysher  <eglayshe@umich.edu>

	* Makefile.PL: Minor updates for cleaning up after debian building
	* debian/control: Update my email.
	* debian/netcomics-modules.files: Update to point for new build system
	* debian/netcomics.files: Update to point for new build system.
	* debian/netcomics.manpages: See debian/netcomics.files.
	* debian/rules: See debian/netcomics.manpages. :-)

2001-07-11  Elliot Glaysher  <eglayshe@umich.edu>

	* AUTHORS: Updated for my new email.
	* MANIFEST.SKIP: Made sure it skips more debian build crap (MORE, not
	all)
	* debian/rules: Actually get packages that build more (doesn't fully
	work yet)
	* debian/netcomics.manpages: Putting manpages in packages is usually
	a good idea :-P

2001-07-08  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomicsrc: Removed reference to default download directory so
	that netcomicsrc doesn't need to be updated during build process.
	* INSTALL: Updated to work with new Makefile.PL for CPAN.
	* README: Updated to work with new Makefile.PL for CPAN.
	* comicpage: Updated to work with new Makefile.PL for CPAN.
	* netcomics: Updated to work with new Makefile.PL for CPAN.
	* netcomics.spec: Updated to work with new Makefile.PL for CPAN.
	* show_comics: Updated to work with new Makefile.PL for CPAN.
	* debian/netcomics-modules.dirs: Updated to work with new
	Makefile.PL for CPAN.
	* debian/netcomics-modules.files: Updated to work with new
	Makefile.PL for CPAN.
	* debian/netcomics.conffiles: Updated to work with new Makefile.PL
	for CPAN.
	* debian/netcomics.dirs: Updated to work with new Makefile.PL for
	CPAN.
	* debian/netcomics.files: Updated to work with new Makefile.PL for
	CPAN.
	* debian/rules: Updated to work with new Makefile.PL for CPAN.
	* Makefile: Removed file; It's now generated by Makefile.PL