@@ -1,3 +1,5 @@
 Makefile
 blib
 pm_to_blib
+build-stamp
+configure-stamp
