@@ -274,6 +274,7 @@ SUBPATHS = \
 	| $(PERL) -pe s%/var/spool/netcomics%$(TMPDIR)%gm \
 	| $(PERL) -pe s%/usr/lib/perl5/site_perl%$(INSTALLSITELIB)%gm \
 	| $(PERL) -pe s%/usr/share/netcomics/html_tmpl%$(INSTALLSITELIB)/$(HTML_INST_DIR)%gm \
+    | $(PERL) -pe s%/usr/share/comicpage%$(INSTALLSITELIB)/Netcomics/Comicpage%gm \
 	| $(PERL) -pe s%/usr/share/netcomics%$(INSTALLSITELIB)/$(MOD_INST_DIR)%gm \
 	| $(PERL) -pe s%netcomics%$(NAME)%gm \
 	| $(PERL) -pe s%/etc%$(INSTALLSITELIB)/$(ETC_INST_DIR)%gm \
